# NX_PromptStyler

./: .gitignore  README.md  __init__.py  presets.json  pyproject.toml
CSV/: composition.csv  general atmosphere.csv  haircut.csv  lighting.csv  negative.csv  positive.csv
CSV_default/: angle-of-view.csv  artists.csv  cameras.csv  composition.csv  effects.csv  films.csv  framing.csv  general atmosphere.csv  haircut.csv  styles.csv
js/: NX_PromptStyler.js
